--- a/app/src/main/res/layout-land/activity_robot_controller.xml
+++ b/app/src/main/res/layout-land/activity_robot_controller.xml
@@ -19,26 +19,25 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-
-            <io.github.plenglin.kiwicontrol.JoystickView
-                android:id="@+id/translationJoystick"
+            <io.github.plenglin.kiwicontrol.KnobView
+                android:id="@+id/bearingKnob"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_centerInParent="true"
                 android:clickable="true"
 
-                custom:bgColor="@color/transJoystickBg"
-                custom:touchColor="@color/transJoystickTouch"
-                custom:touchRadius="25dp"
-                custom:joystickLimit="5dp"/>
+                custom:indicatorColor="@color/transJoystickTouch"
+                custom:indicatorLength="70dp"
+                custom:indicatorWidth="7dp"
+                custom:knobColor="@color/transJoystickBg"/>
 
             <TextView
-                android:layout_centerHorizontal="true"
-                android:layout_above="@id/translationJoystick"
-                android:paddingBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/translationJoystickTitle"
+                android:layout_above="@id/bearingKnob"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="10dp"
+                android:text="@string/rotationJoystickTitle"
                 android:textColor="@color/joystickLabel"
                 android:textSize="12pt"/>
 
@@ -48,6 +47,29 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
+
+
+            <io.github.plenglin.kiwicontrol.JoystickView
+                android:id="@+id/translationJoystick"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:clickable="true"
+
+                custom:bgColor="@color/transJoystickBg"
+                custom:joystickLimit="5dp"
+                custom:touchColor="@color/transJoystickTouch"
+                custom:touchRadius="30dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/translationJoystick"
+                android:layout_centerHorizontal="true"
+                android:paddingBottom="10dp"
+                android:text="@string/translationJoystickTitle"
+                android:textColor="@color/joystickLabel"
+                android:textSize="12pt"/>
 
         </RelativeLayout>
 
