--- a/app/src/main/res/layout-land/activity_robot_controller.xml
+++ b/app/src/main/res/layout-land/activity_robot_controller.xml
@@ -1,78 +1,187 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
 
              android:layout_width="match_parent"
+             android:baselineAligned="false"
              android:layout_height="match_parent"
+             android:orientation="horizontal"
+             android:weightSum="5"
              android:background="@color/controllerBg"
 
              tools:context="io.github.plenglin.kiwicontrol.RobotControllerActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Rotation Knob -->
+    <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:layout_weight="2">
 
-        <RelativeLayout
-            android:layout_width="0dp"
+        <io.github.plenglin.kiwicontrol.KnobView
+            android:id="@+id/bearingKnob"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+
+            custom:indicatorColor="@color/controlsIndicator"
+            custom:indicatorLength="70dp"
+            custom:indicatorWidth="7dp"
+            custom:knobColor="@color/controlsBg"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/bearingKnob"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="10dp"
+            android:textAppearance="@style/ControlLabel"
+            android:text="@string/rotationJoystickTitle"/>
+
+    </RelativeLayout>
+
+    <!-- Data Pane -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/ControlLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:paddingTop="30dp"
+            android:text="@string/dataPaneTitle"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:stretchColumns="*">
 
-            <io.github.plenglin.kiwicontrol.KnobView
-                android:id="@+id/bearingKnob"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
-                android:clickable="true"
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="5dp">
 
-                custom:indicatorColor="@color/transJoystickTouch"
-                custom:indicatorLength="70dp"
-                custom:indicatorWidth="7dp"
-                custom:knobColor="@color/transJoystickBg"/>
+                <TextView
+                    style="@style/DataLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/connectionStateLabel"/>
+                <TextView
+                    android:id="@+id/connectionState"
+                    style="@style/DataValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="HC-06"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/bearingKnob"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="10dp"
-                android:text="@string/rotationJoystickTitle"
-                android:textColor="@color/joystickLabel"
-                android:textSize="12pt"/>
+            </TableRow>
 
-        </RelativeLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="5dp">
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+                <TextView
+                    style="@style/DataLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bearingLabel"/>
 
+                <TextView
+                    android:id="@+id/dataBearing"
+                    style="@style/DataValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="0"/>
 
-            <io.github.plenglin.kiwicontrol.JoystickView
-                android:id="@+id/translationJoystick"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
-                android:clickable="true"
+            </TableRow>
 
-                custom:bgColor="@color/transJoystickBg"
-                custom:joystickLimit="5dp"
-                custom:touchColor="@color/transJoystickTouch"
-                custom:touchRadius="30dp"/>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@id/translationJoystick"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="10dp"
-                android:text="@string/translationJoystickTitle"
-                android:textColor="@color/joystickLabel"
-                android:textSize="12pt"/>
+                <TextView
+                    style="@style/DataLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/vxLabel"/>
+                <TextView
+                    android:id="@+id/dataVelocityX"
+                    style="@style/DataValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="3.000"/>
+            </TableRow>
 
-        </RelativeLayout>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/DataLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/vyLabel"/>
+                <TextView
+                    android:id="@+id/dataVelocityY"
+                    style="@style/DataValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="4.000"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    style="@style/DataLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/velocityLabel"/>
+                <TextView
+                    android:id="@+id/dataVelocityMag"
+                    style="@style/DataValue"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="5.000"/>
+            </TableRow>
+
+        </TableLayout>
 
     </LinearLayout>
 
-</FrameLayout>
+    <!-- Translation Stick -->
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2">
+
+        <io.github.plenglin.kiwicontrol.JoystickView
+            android:id="@+id/translationJoystick"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerInParent="true"
+            android:clickable="true"
+
+            custom:bgColor="@color/controlsBg"
+            custom:joystickLimit="5dp"
+            custom:touchColor="@color/controlsIndicator"
+            custom:touchRadius="30dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/translationJoystick"
+            android:layout_centerHorizontal="true"
+            android:paddingBottom="10dp"
+            android:textAppearance="@style/ControlLabel"
+            android:text="@string/translationJoystickTitle"/>
+
+    </RelativeLayout>
+
+</LinearLayout>
