Add bluetoothy stuff

--- a/app/src/main/res/layout-land/activity_robot_controller.xml
+++ b/app/src/main/res/layout-land/activity_robot_controller.xml
@@ -58,7 +58,7 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:stretchColumns="*">
 
             <TableRow
@@ -152,6 +152,15 @@
             </TableRow>
 
         </TableLayout>
+
+        <Button
+            android:id="@+id/connectBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:textColor="@color/controllerData"
+            android:text="@string/connectDeviceButton"/>
 
     </LinearLayout>
 
