Make joystick look a bit nicer

--- a/app/src/main/res/layout-land/activity_robot_controller.xml
+++ b/app/src/main/res/layout-land/activity_robot_controller.xml
@@ -178,7 +178,8 @@
             android:clickable="true"
 
             custom:bgColor="@color/controlsBg"
-            custom:joystickLimit="5dp"
+            custom:bgRadius="80dp"
+            custom:joystickLimit="-10dp"
             custom:touchColor="@color/controlsIndicator"
             custom:touchRadius="30dp"/>
 
