--- a/app/src/main/res/layout-land/activity_robot_controller.xml
+++ b/app/src/main/res/layout-land/activity_robot_controller.xml
@@ -159,6 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
+            tools:backgroundTint="@color/connected"
             android:textColor="@color/controllerData"
             android:text="@string/connectDeviceButton"/>
 
